@@ -8,6 +8,8 @@
 	- add --all-name option (finds every lang file); drop defattr()
 	  from *.lang files (arekm,mkochano,pascalek,wiget@PLD).
 	- add type to tag array.
+	- add Disttag: syntax to spec file parser and header content.
+	- define Suggests:/Enhances: and Priority: tag values.
 
 4.3.1 -> 4.3.2:
 	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
